Add preprocessing steps for feature-target splitting and data rebalancing

--- a/3.Preprocessing.ipynb
+++ b/3.Preprocessing.ipynb
@@ -6,6 +6,27 @@
    "source": [
     "José Delgado"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Features and Targets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rebalance Data"
+   ]
   }
  ],
  "metadata": {
