--- a/1.Importing.ipynb
+++ b/1.Importing.ipynb
@@ -36,11 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/iot.db'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "DB_PATH = os.path.join(os.path.dirname(__file__), 'data', 'iot.db')"
+    "DB_PATH = os.path.join('data', 'iot.db')\n",
+    "DB_PATH"
    ]
   },
   {
@@ -48,6 +60,16 @@
    "metadata": {},
    "source": [
     "## Connect to SQL Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect(DB_PATH)\n",
+    "cur = conn.cursor()"
    ]
   },
   {
