Add data visualization for sensor readings in importing notebook

--- a/1.Importing.ipynb
+++ b/1.Importing.ipynb
@@ -1350,6 +1350,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sensor 1</th>\n",
+       "      <th>Sensor 2</th>\n",
+       "      <th>Sensor 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.106008</td>\n",
+       "      <td>1.765494</td>\n",
+       "      <td>0.072488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.400997</td>\n",
+       "      <td>0.410752</td>\n",
+       "      <td>0.745569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.675427</td>\n",
+       "      <td>1.217458</td>\n",
+       "      <td>1.491454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.745153</td>\n",
+       "      <td>1.174935</td>\n",
+       "      <td>2.206422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.090793</td>\n",
+       "      <td>1.094919</td>\n",
+       "      <td>0.785266</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sensor 1  Sensor 2  Sensor 3\n",
+       "0  2.106008  1.765494  0.072488\n",
+       "1  2.400997  0.410752  0.745569\n",
+       "2  0.675427  1.217458  1.491454\n",
+       "3  1.745153  1.174935  2.206422\n",
+       "4  2.090793  1.094919  0.785266"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = np.array(cur.description)[:, 0]\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
