--- a/4.Modelling.ipynb
+++ b/4.Modelling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.linear_model import RidgeClassifier, SGDClassifier"
@@ -58,10 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipelines = {\n",
+    "    'rf': make_pipeline(StandardScaler(), PCA(n_components=45), RandomForestClassifier(random_state=1234)),\n",
+    "    'gb': make_pipeline(StandardScaler(), PCA(n_components=45), GradientBoostingClassifier(random_state=1234)),\n",
+    "    'ridge': make_pipeline(StandardScaler(), PCA(n_components=45), RidgeClassifier(random_state=1234)),\n",
+    "    'sgd': make_pipeline(StandardScaler(), PCA(n_components=45), SGDClassifier(random_state=1234))\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,8 +96,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "3.13.0",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
