Add model fitting and serialization to the modeling notebook

--- a/4.Modelling.ipynb
+++ b/4.Modelling.ipynb
@@ -611,6 +611,56 @@
    "source": [
     "## Train PCA Factored Models"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf has been fitted\n",
+      "gb has been fitted\n",
+      "ridge has been fitted\n",
+      "sgd has been fitted\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_models = {}\n",
+    "for algo, pipeline in pipelines.items():\n",
+    "    try:\n",
+    "        model = GridSearchCV(pipeline, grid[algo], cv=10, n_jobs=-1)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        fit_models[algo] = model\n",
+    "        print(f\"{algo} has been fitted\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in {algo}\")\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for algo, model in fit_models.items():\n",
+    "    filename = f\"models/{algo}_gridsearch.pkl\"\n",
+    "    with open(filename, 'wb') as f:\n",
+    "        dill.dump(model, f)"
+   ]
   }
  ],
  "metadata": {
