Add database integration for predictions in evaluation notebook

--- a/5.Evaluation.ipynb
+++ b/5.Evaluation.ipynb
@@ -1242,10 +1242,118 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_PATH = os.path.join('data', 'iot.db')\n",
+    "conn = sqlite3.connect(DB_PATH)\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PREDICTIONS_TABLE = '''\n",
+    "    SELECT\n",
+    "        name\n",
+    "    FROM\n",
+    "        sqlite_master\n",
+    "    WHERE\n",
+    "        type='table'\n",
+    "        AND \n",
+    "        name='predictions';\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = cur.execute(PREDICTIONS_TABLE)\n",
+    "tables = res.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('predictions',)]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x116efd740>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(f\"CREATE TABLE predictions {tuple(scoring.columns)};\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Push back into Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2153"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scoring.to_sql('predictions', conn, if_exists='replace', index=False)"
    ]
   },
   {
@@ -1254,6 +1362,13 @@
    "source": [
     "## View Loaded Results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
