Refactor evaluation notebook for better performance and maintainability

--- a/5.Evaluation.ipynb
+++ b/5.Evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import os\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import numpy as np"
    ]
   },
   {
@@ -1365,10 +1366,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res = cur.execute('SELECT * FROM predictions;')\n",
+    "predictions = res.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_columns = np.array(cur.description)[:,0]\n",
+    "sql_predictions = pd.DataFrame(predictions, columns=sql_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sensor 1</th>\n",
+       "      <th>Sensor 2</th>\n",
+       "      <th>Sensor 3</th>\n",
+       "      <th>Sensor 4</th>\n",
+       "      <th>Sensor 5</th>\n",
+       "      <th>Sensor 6</th>\n",
+       "      <th>Sensor 7</th>\n",
+       "      <th>Sensor 8</th>\n",
+       "      <th>Sensor 9</th>\n",
+       "      <th>Sensor 10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Sensor 94</th>\n",
+       "      <th>Sensor 95</th>\n",
+       "      <th>Sensor 96</th>\n",
+       "      <th>Sensor 97</th>\n",
+       "      <th>Sensor 98</th>\n",
+       "      <th>Sensor 99</th>\n",
+       "      <th>Sensor 100</th>\n",
+       "      <th>Sensor 101</th>\n",
+       "      <th>Sensor 102</th>\n",
+       "      <th>Predictions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.585750</td>\n",
+       "      <td>0.710870</td>\n",
+       "      <td>0.961795</td>\n",
+       "      <td>0.535207</td>\n",
+       "      <td>1.327430</td>\n",
+       "      <td>5.352066</td>\n",
+       "      <td>2.226076</td>\n",
+       "      <td>-1.417258</td>\n",
+       "      <td>-0.713738</td>\n",
+       "      <td>8.562829</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.128090</td>\n",
+       "      <td>-2.229427</td>\n",
+       "      <td>1.848735</td>\n",
+       "      <td>3.040128</td>\n",
+       "      <td>-0.709363</td>\n",
+       "      <td>2.262458</td>\n",
+       "      <td>4.951563</td>\n",
+       "      <td>52.587106</td>\n",
+       "      <td>14.281632</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.394299</td>\n",
+       "      <td>0.528989</td>\n",
+       "      <td>0.403531</td>\n",
+       "      <td>0.562596</td>\n",
+       "      <td>1.060444</td>\n",
+       "      <td>5.625960</td>\n",
+       "      <td>1.060982</td>\n",
+       "      <td>1.135943</td>\n",
+       "      <td>1.141834</td>\n",
+       "      <td>28.130973</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.086879</td>\n",
+       "      <td>-1.138635</td>\n",
+       "      <td>1.508479</td>\n",
+       "      <td>1.552685</td>\n",
+       "      <td>-0.362293</td>\n",
+       "      <td>-0.873339</td>\n",
+       "      <td>16.082543</td>\n",
+       "      <td>24.111206</td>\n",
+       "      <td>14.334397</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.269294</td>\n",
+       "      <td>0.324147</td>\n",
+       "      <td>-0.033710</td>\n",
+       "      <td>2.277046</td>\n",
+       "      <td>-0.041533</td>\n",
+       "      <td>22.770459</td>\n",
+       "      <td>2.366656</td>\n",
+       "      <td>-13.778314</td>\n",
+       "      <td>-1.534053</td>\n",
+       "      <td>13.036520</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.812740</td>\n",
+       "      <td>-1.899061</td>\n",
+       "      <td>1.184088</td>\n",
+       "      <td>2.589629</td>\n",
+       "      <td>-0.604247</td>\n",
+       "      <td>0.854719</td>\n",
+       "      <td>9.455773</td>\n",
+       "      <td>70.558905</td>\n",
+       "      <td>14.330505</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.246255</td>\n",
+       "      <td>1.932317</td>\n",
+       "      <td>2.315582</td>\n",
+       "      <td>0.766818</td>\n",
+       "      <td>1.328568</td>\n",
+       "      <td>7.668182</td>\n",
+       "      <td>3.359558</td>\n",
+       "      <td>4.186759</td>\n",
+       "      <td>0.975112</td>\n",
+       "      <td>-0.464028</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.837624</td>\n",
+       "      <td>-0.877511</td>\n",
+       "      <td>-0.106852</td>\n",
+       "      <td>1.196606</td>\n",
+       "      <td>-0.279208</td>\n",
+       "      <td>-0.881114</td>\n",
+       "      <td>23.510027</td>\n",
+       "      <td>84.022643</td>\n",
+       "      <td>14.339029</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.325781</td>\n",
+       "      <td>1.895224</td>\n",
+       "      <td>0.821280</td>\n",
+       "      <td>2.313757</td>\n",
+       "      <td>0.544863</td>\n",
+       "      <td>23.137572</td>\n",
+       "      <td>0.278491</td>\n",
+       "      <td>0.412551</td>\n",
+       "      <td>0.384150</td>\n",
+       "      <td>14.307797</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.628036</td>\n",
+       "      <td>-4.848419</td>\n",
+       "      <td>-0.632701</td>\n",
+       "      <td>6.611480</td>\n",
+       "      <td>-1.542679</td>\n",
+       "      <td>4.790277</td>\n",
+       "      <td>18.829649</td>\n",
+       "      <td>75.828002</td>\n",
+       "      <td>14.474880</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2148</th>\n",
+       "      <td>0.881909</td>\n",
+       "      <td>2.160381</td>\n",
+       "      <td>0.198874</td>\n",
+       "      <td>0.528587</td>\n",
+       "      <td>2.929006</td>\n",
+       "      <td>5.285871</td>\n",
+       "      <td>-0.149039</td>\n",
+       "      <td>-0.044315</td>\n",
+       "      <td>0.337509</td>\n",
+       "      <td>41.450987</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2.480172</td>\n",
+       "      <td>2.598276</td>\n",
+       "      <td>0.516649</td>\n",
+       "      <td>-3.543104</td>\n",
+       "      <td>0.826724</td>\n",
+       "      <td>1.201014</td>\n",
+       "      <td>5.306023</td>\n",
+       "      <td>107.888916</td>\n",
+       "      <td>14.172600</td>\n",
+       "      <td>Failure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2149</th>\n",
+       "      <td>2.057214</td>\n",
+       "      <td>0.904536</td>\n",
+       "      <td>0.028225</td>\n",
+       "      <td>1.553294</td>\n",
+       "      <td>-0.967447</td>\n",
+       "      <td>15.532938</td>\n",
+       "      <td>1.853190</td>\n",
+       "      <td>2.077073</td>\n",
+       "      <td>0.432942</td>\n",
+       "      <td>-22.393528</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.299062</td>\n",
+       "      <td>-1.360922</td>\n",
+       "      <td>0.393036</td>\n",
+       "      <td>1.855803</td>\n",
+       "      <td>-0.433021</td>\n",
+       "      <td>2.579969</td>\n",
+       "      <td>-6.533873</td>\n",
+       "      <td>67.844550</td>\n",
+       "      <td>14.265565</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2150</th>\n",
+       "      <td>2.600971</td>\n",
+       "      <td>-1.336006</td>\n",
+       "      <td>2.951594</td>\n",
+       "      <td>2.547870</td>\n",
+       "      <td>2.756117</td>\n",
+       "      <td>25.478697</td>\n",
+       "      <td>0.066346</td>\n",
+       "      <td>-0.150740</td>\n",
+       "      <td>-0.535041</td>\n",
+       "      <td>42.708971</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.833823</td>\n",
+       "      <td>-2.968767</td>\n",
+       "      <td>-0.021540</td>\n",
+       "      <td>4.048319</td>\n",
+       "      <td>-0.944608</td>\n",
+       "      <td>0.795499</td>\n",
+       "      <td>0.932315</td>\n",
+       "      <td>-9.059734</td>\n",
+       "      <td>14.311708</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2151</th>\n",
+       "      <td>1.170571</td>\n",
+       "      <td>0.347656</td>\n",
+       "      <td>1.484250</td>\n",
+       "      <td>0.527953</td>\n",
+       "      <td>0.595716</td>\n",
+       "      <td>5.279533</td>\n",
+       "      <td>1.597344</td>\n",
+       "      <td>2.290511</td>\n",
+       "      <td>1.629632</td>\n",
+       "      <td>31.414412</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.042757</td>\n",
+       "      <td>-2.140031</td>\n",
+       "      <td>0.659276</td>\n",
+       "      <td>2.918224</td>\n",
+       "      <td>-0.680919</td>\n",
+       "      <td>1.265063</td>\n",
+       "      <td>21.229727</td>\n",
+       "      <td>-2.977392</td>\n",
+       "      <td>14.192465</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152</th>\n",
+       "      <td>1.701952</td>\n",
+       "      <td>-0.342722</td>\n",
+       "      <td>-0.520516</td>\n",
+       "      <td>0.983608</td>\n",
+       "      <td>2.130481</td>\n",
+       "      <td>9.836081</td>\n",
+       "      <td>0.479025</td>\n",
+       "      <td>-0.199829</td>\n",
+       "      <td>-0.254466</td>\n",
+       "      <td>14.446206</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.690472</td>\n",
+       "      <td>-2.818590</td>\n",
+       "      <td>-0.133641</td>\n",
+       "      <td>3.843532</td>\n",
+       "      <td>-0.896824</td>\n",
+       "      <td>4.992955</td>\n",
+       "      <td>-6.741098</td>\n",
+       "      <td>98.528663</td>\n",
+       "      <td>14.296814</td>\n",
+       "      <td>Running</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2153 rows × 103 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Sensor 1  Sensor 2  Sensor 3  Sensor 4  Sensor 5   Sensor 6  Sensor 7  \\\n",
+       "0     0.585750  0.710870  0.961795  0.535207  1.327430   5.352066  2.226076   \n",
+       "1     1.394299  0.528989  0.403531  0.562596  1.060444   5.625960  1.060982   \n",
+       "2     2.269294  0.324147 -0.033710  2.277046 -0.041533  22.770459  2.366656   \n",
+       "3     1.246255  1.932317  2.315582  0.766818  1.328568   7.668182  3.359558   \n",
+       "4     0.325781  1.895224  0.821280  2.313757  0.544863  23.137572  0.278491   \n",
+       "...        ...       ...       ...       ...       ...        ...       ...   \n",
+       "2148  0.881909  2.160381  0.198874  0.528587  2.929006   5.285871 -0.149039   \n",
+       "2149  2.057214  0.904536  0.028225  1.553294 -0.967447  15.532938  1.853190   \n",
+       "2150  2.600971 -1.336006  2.951594  2.547870  2.756117  25.478697  0.066346   \n",
+       "2151  1.170571  0.347656  1.484250  0.527953  0.595716   5.279533  1.597344   \n",
+       "2152  1.701952 -0.342722 -0.520516  0.983608  2.130481   9.836081  0.479025   \n",
+       "\n",
+       "       Sensor 8  Sensor 9  Sensor 10  ...  Sensor 94  Sensor 95  Sensor 96  \\\n",
+       "0     -1.417258 -0.713738   8.562829  ...   2.128090  -2.229427   1.848735   \n",
+       "1      1.135943  1.141834  28.130973  ...   1.086879  -1.138635   1.508479   \n",
+       "2    -13.778314 -1.534053  13.036520  ...   1.812740  -1.899061   1.184088   \n",
+       "3      4.186759  0.975112  -0.464028  ...   0.837624  -0.877511  -0.106852   \n",
+       "4      0.412551  0.384150  14.307797  ...   4.628036  -4.848419  -0.632701   \n",
+       "...         ...       ...        ...  ...        ...        ...        ...   \n",
+       "2148  -0.044315  0.337509  41.450987  ...  -2.480172   2.598276   0.516649   \n",
+       "2149   2.077073  0.432942 -22.393528  ...   1.299062  -1.360922   0.393036   \n",
+       "2150  -0.150740 -0.535041  42.708971  ...   2.833823  -2.968767  -0.021540   \n",
+       "2151   2.290511  1.629632  31.414412  ...   2.042757  -2.140031   0.659276   \n",
+       "2152  -0.199829 -0.254466  14.446206  ...   2.690472  -2.818590  -0.133641   \n",
+       "\n",
+       "      Sensor 97  Sensor 98  Sensor 99  Sensor 100  Sensor 101  Sensor 102  \\\n",
+       "0      3.040128  -0.709363   2.262458    4.951563   52.587106   14.281632   \n",
+       "1      1.552685  -0.362293  -0.873339   16.082543   24.111206   14.334397   \n",
+       "2      2.589629  -0.604247   0.854719    9.455773   70.558905   14.330505   \n",
+       "3      1.196606  -0.279208  -0.881114   23.510027   84.022643   14.339029   \n",
+       "4      6.611480  -1.542679   4.790277   18.829649   75.828002   14.474880   \n",
+       "...         ...        ...        ...         ...         ...         ...   \n",
+       "2148  -3.543104   0.826724   1.201014    5.306023  107.888916   14.172600   \n",
+       "2149   1.855803  -0.433021   2.579969   -6.533873   67.844550   14.265565   \n",
+       "2150   4.048319  -0.944608   0.795499    0.932315   -9.059734   14.311708   \n",
+       "2151   2.918224  -0.680919   1.265063   21.229727   -2.977392   14.192465   \n",
+       "2152   3.843532  -0.896824   4.992955   -6.741098   98.528663   14.296814   \n",
+       "\n",
+       "      Predictions  \n",
+       "0         Running  \n",
+       "1         Running  \n",
+       "2         Running  \n",
+       "3         Running  \n",
+       "4         Running  \n",
+       "...           ...  \n",
+       "2148      Failure  \n",
+       "2149      Running  \n",
+       "2150      Running  \n",
+       "2151      Running  \n",
+       "2152      Running  \n",
+       "\n",
+       "[2153 rows x 103 columns]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql_predictions"
+   ]
   }
  ],
  "metadata": {
